# derby-names-nicegui

./: .coverage  .gitignore  .justfile  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  api.py  app.json  config.py  conftest.py  database.py  generator.py  main.py  models.py  pyproject.toml  pytest.ini  test_models.py  wordcloud_generator.py  wordcloud_page.py  wsgi.py  wsgi_pythonanywhere.py
.github/: dependabot.yml
.github/workflows/: test.yml
.nicegui/: storage-user-49369fce-6c2e-4dcd-a4d2-11421a7f8d0e.json  storage-user-ca9175fb-89e7-4555-b183-35af1bcbab36.json
data/: derby_names.txt  markov_char_model.json
tests/: README.md  __init__.py  test_api.py  test_database.py  test_generator.py
